--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "author": "Felipe Gómez <fgomez@thoughtworks.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "run": "open dist/filu.html",
+    "build": "tsc && webpack --config webpack.config.js",
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^25.4.0",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-jest": "^26.0.1",
+    "jest": "^26.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
