--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "build": "tsc && webpack --config webpack.config.js",
     "test": "jest"
   },
+  "jest": {    
+    "preset": "ts-jest"
+  },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@types/jest": "^25.2.3",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
